--- a/assets/css/editor-style.css
+++ b/assets/css/editor-style.css
@@ -1,11 +1,11 @@
 /* only in content editor page */
 html .mceContentBody {
-	max-width: 890px;
+	max-width: 500px;
 }
 /* end only in content editor page */
 
 body {
-	font: 13px/1.5em "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font: 13px/1.4em "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #444;
 }
 
@@ -22,7 +22,7 @@ h6 { font-size: 15px; line-height: 1.1em; margin-bottom: 0; }
 
 /* Link */
 a, a > * {
-	color: #0C4DA2; /* #4d90fe; */
+	color: #303398; /* #4d90fe; */
 	text-decoration: none;
 	-webkit-transition: background-color .2s ease, border .2s ease, color .2s ease, opacity .2s ease-in-out;
 	   -moz-transition: background-color .2s ease, border .2s ease, color .2s ease, opacity .2s ease-in-out;
@@ -270,6 +270,13 @@ table tbody tr:hover td {
 	text-align: center;
 }
 
+.wp-caption-dt img{
+	margin-left: 0;
+	margin-top: 0;
+	height: auto;
+	max-width: 100%;
+}
+
 .wp-caption .wp-caption-text,
 .wp-caption-dd {
 	color: #666;
@@ -289,9 +296,5 @@ table tbody tr:hover td {
 .attachment-blog, .wp-post-image,
 img.attachment-size_max, img.size-full, 
 img.alignleft, img.alignright, img.aligncenter, img.alignnone{
-	border: 1px solid #E5E5E5;
-	padding: 5px;
-	-webkit-box-sizing: border-box;
-			-moz-box-sizing: border-box;
-				box-sizing: border-box;
+	border: 1px solid #fcbe62;
 }
