--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -173,14 +173,17 @@
 		width: 100%;
 	}
 
-	.one-fourth, .one-third, .two-third, .two-fourth, .three-fourth{
+	.one-fourth, .one-third, .two-third, .two-fourth, .three-fourth,
+	.alignright, .alignleft{
 		float: none;
 		width: 100%;
 	}
 
 	.wp-caption{width: auto; width:100%!important;}
-	.wp-caption.alignright, .wp-caption.alignleft, .wp-caption.aligncenter{margin: 0; margin-bottom: 1.2em;}
 	.wp-caption img{width: 96%;}
+
+	.wp-caption.alignright, .wp-caption.alignleft, .wp-caption.aligncenter,
+	.alignright, .alignleft{margin: 1.2em 0;}
 
 	.social-icons-float, .flex-caption{
 		display: none;
@@ -193,6 +196,8 @@
 		margin-left: -140px;
 		z-index: 8;
 	}
+
+	#map-info .contact-container{padding: 20px 25px 12px}
 
 	#footer .quick-support {display: none;}
 
